--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
     <script type="text/javascript" src="https://unpkg.com/vue-icon/lib/vue-feather.min.js"></script>
-    <title>snake-client</title>
+    <title>Snake on a plate - Apparat AS</title>
   </head>
   <body>
     <noscript>
